[remove-id-token] - get rid of any trace of id-token.