@@ -121,15 +121,14 @@ public class ProvisionerActionsApiFacade {
 
     private void addClusterLocationToAction(ProvisionAction provisionAction) {
         var projectKey = getParameterString(provisionAction, "project_key");
-        var accessToken = getParameterString(provisionAction, "access_token");
-        var idToken = authenticationProvider.getIdToken();
+        var accessToken = authenticationProvider.getAccessToken();
 
         log.debug("Fetching cluster location for project: {}", projectKey);
-        var clusters = projectsInfoService.getProjectClusters(idToken, accessToken, projectKey).getClusters();
+        var clusters = projectsInfoService.getProjectClusters(accessToken, projectKey).getClusters();
         if (clusters.isEmpty()) {
             throw new ProjectConfigurationException("Cannot retrieve the current project location for project: " + projectKey);
         }
-        var clusterLocation = clusters.get(0);
+        var clusterLocation = clusters.getFirst();
 
         log.debug("Adding cluster_location parameter with value: {}", clusterLocation);
         provisionAction.addParametersItem(ProvisionActionParameter.builder()
